--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
       </div>
     </header>
     <main>
-      <section class="hero-section">
+      <section class="hero-section overlay">
         <div class="container">
+          <div></div>
           <h1 class="hero-txt">Effective Solutions for Your Business</h1>
           <button class="btn-hero btn" type="button">Order Service</button>
         </div>
@@ -63,6 +64,28 @@
       <section class="main-theses">
         <div class="container">
           <h2 class="visually-hidden">main theses</h2>
+          <ul class="bg-fon-main">
+            <li class="bg-fon">
+              <svg class="icon-main" width="64" height="64">
+                <use href="./images/svg/symbol-defs.svg#icon-antenna"></use>
+              </svg>
+            </li>
+            <li class="bg-fon">
+              <svg class="icon-main" width="64" height="64">
+                <use href="./images/svg/symbol-defs.svg#icon-clock"></use>
+              </svg>
+            </li>
+            <li class="bg-fon">
+              <svg class="icon-main" width="64" height="64">
+                <use href="./images/svg/symbol-defs.svg#icon-diagram"></use>
+              </svg>
+            </li>
+            <li class="bg-fon">
+              <svg class="icon-main" width="64" height="64">
+                <use href="./images/svg/symbol-defs.svg#icon-astronaut"></use>
+              </svg>
+            </li>
+          </ul>
           <ul class="feature-list list">
             <li class="feature-item">
               <h3 class="title-studio">Strategy</h3>
@@ -140,6 +163,68 @@
               <div class="team-card-container">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="paragraph">Product Designer</p>
+                <ul class="icon-item">
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://www.instagram.com/"
+                      rel="noopener noreferrer"
+                      aria-label="Instagram link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://twitter.com/"
+                      rel="noopener noreferrer"
+                      aria-label="twitter link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://www.facebook.com/"
+                      rel="noopener noreferrer"
+                      aria-label="facebook link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://www.linkedin.com/"
+                      rel="noopener noreferrer"
+                      aria-label="linkedin link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -152,6 +237,68 @@
               <div class="team-card-container">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="paragraph">Frontend Developer</p>
+                <ul class="icon-item">
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://www.instagram.com/"
+                      rel="noopener noreferrer"
+                      aria-label="instagram link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://twitter.com/"
+                      rel="noopener noreferrer"
+                      aria-label="twitter link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://www.facebook.com/"
+                      rel="noopener noreferrer"
+                      aria-label="facebook link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://www.linkedin.com/"
+                      rel="noopener noreferrer"
+                      aria-label="linkedin link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -164,6 +311,68 @@
               <div class="team-card-container">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="paragraph">Marketing</p>
+                <ul class="icon-item">
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://www.instagram.com/"
+                      rel="noopener noreferrer"
+                      aria-label="instagram link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://twitter.com/"
+                      rel="noopener noreferrer"
+                      aria-label="twitter link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://www.facebook.com/"
+                      rel="noopener noreferrer"
+                      aria-label="facebook link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://www.linkedin.com/"
+                      rel="noopener noreferrer"
+                      aria-label="linkedin link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -176,21 +385,191 @@
               <div class="team-card-container">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="paragraph">UI Designer</p>
+                <ul class="icon-item">
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://www.instagram.com/"
+                      rel="noopener noreferrer"
+                      aria-label="instagram link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://twitter.com/"
+                      rel="noopener noreferrer"
+                      aria-label="twitter link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://www.facebook.com/"
+                      rel="noopener noreferrer"
+                      aria-label="facebook link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-list">
+                    <a
+                      class="links-team"
+                      href="https://www.linkedin.com/"
+                      rel="noopener noreferrer"
+                      aria-label="linkedin link"
+                      target="_blank"
+                    >
+                      <svg class="icon-team" width="16" height="16">
+                        <use
+                          href="./images/svg/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="customers">
+        <div class="container">
+          <h2 class="customers-txt">Customers</h2>
+          <ul class="customers-list">
+            <li class="customers-item">
+              <a class="customers-link" href="" target="_blank">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/svg/symbol-defs.svg#icon-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href="" target="_blank">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/svg/symbol-defs.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href="" target="_blank">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/svg/symbol-defs.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href="" target="_blank">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/svg/symbol-defs.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href="" target="_blank">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="../images/svg/symbol-defs.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href="" target="_blank">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/svg/symbol-defs.svg#icon-logo-5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer-container">
-      <div class="container">
-        <a class="header-logo link footer-logo" href="index.html"
-          >web<span class="footer-studio">studio</span></a
-        >
-        <p class="paragraph footer-paragraf">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-flex">
+        <div class="right-footer">
+          <a class="header-logo link footer-logo" href="index.html"
+            >web<span class="footer-studio">studio</span></a
+          >
+          <p class="paragraph footer-paragraf">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="left-footer">
+          <h2 class="footer-media-txt">Social media</h2>
+          <ul class="icon-item item-footer">
+            <li class="icon-list-footer">
+              <a
+                class="links-team-footer"
+                href="https://www.instagram.com/"
+                rel="noopener noreferrer"
+                aria-label="instagram link"
+                target="_blank"
+              >
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-footer">
+              <a
+                class="links-team-footer"
+                href="https://twitter.com/"
+                rel="noopener noreferrer"
+                aria-label="twitter link"
+                target="_blank"
+              >
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-footer">
+              <a
+                class="links-team-footer"
+                href="https://www.facebook.com/"
+                rel="noopener noreferrer"
+                aria-label="facebook link"
+                target="_blank"
+              >
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-footer">
+              <a
+                class="links-team-footer"
+                href="https://www.linkedin.com/"
+                rel="noopener noreferrer"
+                aria-label="linkedin link"
+                target="_blank"
+              >
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
