--- a/portfolio.html
+++ b/portfolio.html
@@ -207,14 +207,73 @@
       </section>
     </main>
     <footer>
-      <div class="container footer-container">
-        <a class="header-logo link footer-logo" href="index.html"
-          >web<span class="footer-studio">studio</span></a
-        >
-        <p class="paragraph footer-paragraf">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container footer-flex">
+        <div class="right-footer">
+          <a class="header-logo link footer-logo" href="index.html"
+            >web<span class="footer-studio">studio</span></a
+          >
+          <p class="paragraph footer-paragraf">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="left-footer">
+          <h2 class="footer-media-txt">Social media</h2>
+          <ul class="icon-item item-footer">
+            <li class="icon-list-footer">
+              <a
+                class="links-team-footer"
+                href="https://www.instagram.com/"
+                rel="noopener noreferrer"
+                aria-label="instagram link"
+                target="_blank"
+              >
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-footer">
+              <a
+                class="links-team-footer"
+                href="https://twitter.com/"
+                rel="noopener noreferrer"
+                aria-label="twitter link"
+                target="_blank"
+              >
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-footer">
+              <a
+                class="links-team-footer"
+                href="https://www.facebook.com/"
+                rel="noopener noreferrer"
+                aria-label="facebook link"
+                target="_blank"
+              >
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-footer">
+              <a
+                class="links-team-footer"
+                href="https://www.linkedin.com/"
+                rel="noopener noreferrer"
+                aria-label="linkedin link"
+                target="_blank"
+              >
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
